<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dtu</groupId>
  <artifactId>cucumbertest</artifactId>
  <version>0.0.1-SNAPSHOT</version>

<properties>
   <maven.compiler.source>21</maven.compiler.source>
   <maven.compiler.target>21</maven.compiler.target>
</properties>

	<dependencies>
		<dependency>
		     <groupId>io.cucumber</groupId>
		     <artifactId>cucumber-java</artifactId>
             <version>7.2.3</version>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>7.2.3</version>
            <scope>test</scope>
	    </dependency>
	
	</dependencies>

</project>